worked on the align ments and fixed over flows removed layer tech and moved to cinstrains to fix the over flows

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,14 @@ dependencies:
   just_audio: ^0.10.5
   http: ^1.6.0
   video_player: ^2.10.1
+  flutter_html: ^3.0.0
+  flutter_html_all: ^3.0.0
+  flutter_html_audio: ^3.0.0
+  flutter_html_iframe: ^3.0.0
+  flutter_html_math: ^3.0.0
+  flutter_html_svg: ^3.0.0
+  flutter_html_table: ^3.0.0
+  flutter_html_video: ^3.0.0
 
 dev_dependencies:
   flutter_test:
