--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_html_svg: ^3.0.0
   flutter_html_table: ^3.0.0
   flutter_html_video: ^3.0.0
+  flutter_bloc: ^9.1.1
 
 dev_dependencies:
   flutter_test:
