final build may be bugs

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,13 @@ dependencies:
   visibility_detector: ^0.4.0+2
   page_flip_builder: ^0.1.4
   flutter_magnifier: ^0.0.2
+  hive_flutter: ^1.1.0
+  dio: ^5.9.1
+  path_provider: ^2.1.5
+  uuid: ^4.5.2
+  hive: ^2.2.3
+  confetti: ^0.8.0
+  dotted_border: ^3.1.0
 
 dev_dependencies:
   flutter_test:
